add_executable(01_TreeTravel 01_BinaryTreeTravel/main.c
		01_BinaryTreeTravel/binaryTree.c 01_BinaryTreeTravel/binaryTree.h)

add_executable(02_TBree 02_ThreadedBTree/main.c
		02_ThreadedBTree/threadedBTree.c 02_ThreadedBTree/threadedBTree.h)

add_executable(03_BSTree 03_BinarySearchTree/main.c
		03_BinarySearchTree/BSTree.c 03_BinarySearchTree/BSTree.h)

add_executable(04_AVTree 04_AVLTree/main.c 04_AVLTree/AVLTree.c 04_AVLTree/AVLTree.h)

add_executable(05_UnionFindSet 05_UnionFindSet/main.c
		05_UnionFindSet/quickFindSet.c 05_UnionFindSet/quickFindSet.h)